1998-05-04  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* Makefile.in:
	    Version 2.99.50-s3

	* transports/smtp/smtp.c:
	    A few cases of calls to  smtp_sync() while SS->smtpfp
	    was already NULLed are now protected.  One can't do
	    any remote syncing when there is no remote...

1998-04-27  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* libc/Makefile.in:
	    Fixes for installation of  zmailer.h, and libzmailer.a
	    (Noted by Eugene Crosser)

	* compat/sendmail/sendmail.c:
	    Usage of "-f<>" option (source as the 'box') creates
	    message with "channel error" for the reported envelope
	    source.  This was for easier debugging of 'channel error'
	    things, but YMMV as the saying goes...

	* proto/Makefile.in:
	    Weird problems in "make mailshare" installing *.conf
	    files.  Perhaps fixed now. (Noted by Eugene Crosser)

	* router/rfc822.c:
	    Alternate scheme for dealing with SMTP MAIL FROM:<>, and
	    lack of "From:" header in the message.

	* Makefile{,.in}:
	    Version: 2.99.50-s2

1998-04-24  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* configure.in, acconfig.h, lib/prversion.c:
	    Store ./configure command parameters into a #define,
	    and present them in places calling  prversion().
	    (Makes sense in several cases, IMO..)

	* configure.in, (most)/Makefile.in:
	    New configuration option:
		--with-getpwnam-library="-L.. -l.."
	    helping overloading of  getpwnam()  (and getpwuid() ?)
	    library calls with your own special ones; if you have some
	    ISP system with backend databases, etc..

1998-04-09  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* configure.in:
	    RedHat 5.0/glibc-2.0.7-6: found   res_init()  in libc, but
	    not others, like  res_mkquery().

	* transports/mailbox/mailbox.c, man/mailbox.8, README.UPGRADING:
	    New option: "-C" to canonify username to what pw_name
	    from  getpwnam()  call yields.  Previously this canonification
	    was done blindly -- does not affect most people, but there are