@@ -1,3 +1,15 @@
+1998-05-05  Matti Aarnio  <mea@mea.tmt.tele.fi>
+
+	* scheduler/readconfig.c, scheduler/scheduler.h,
+	  scheduler/transport.c, proto/scheduler.conf.in:
+	    Selector parameters:
+		priority=<n>
+		nice=<n>
+		syspriority=<n>
+		sysnice=<n>
+	    Further into at the default scheduler.conf(.in)
+	    comments.  Idea thanks to <Nicholas_Briggs.PARC@xerox.com>
+
 1998-05-04  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
 	* Makefile.in:
